--- a/Assignments/Assignment_1_Solution.ipynb
+++ b/Assignments/Assignment_1_Solution.ipynb
@@ -64,8 +64,8 @@
    "outputs": [],
    "source": [
     "# %%capture\n",
-    "# pip install --upgrade 'protobuf<=3.20.1'",
     "# !pip install --upgrade pip \n",
+    "# pip install --upgrade 'protobuf<=3.20.1'\n",
     "# !pip install python-snappy\n",
     "# !pip install tensorflow_data_validation[visualization]"
    ]
